--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <div class="first-line">
             <div class="firstCont">
                 <ul>
-                    <li><a href="https://www.cubevalley.net/goods?id=14153&UseCache=false&pageID=1309">회사소개</a></li>
-                    <li><a href="https://www.cubevalley.net/goods?id=14412&UseCache=false&pageID=1309">언론보도</a></li>
+                    <li><a href="https://www.cubevalley.net/goods?id=14153&UseCache=false&pageID=1309" target="_blank">회사소개</a></li>
+                    <li><a href="https://www.cubevalley.net/goods?id=14412&UseCache=false&pageID=1309" target="_blank">언론보도</a></li>
                 </ul>
                 <div class="family">
                     <ul>
