--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
   rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
 />
-
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 </head>
 <body>
@@ -29,7 +28,8 @@
                       <li><a href="https://beyond56.com/" target="_blank">BEYOND56</a></li>
                     </ul>
                     <a href="#" class="">
-                        <i class="icon" role="img"></i> FAMILY SITE
+                        FAMILY SITE
+                        <i class="icon" role="img"></i>
                     </a>
                   </div>
             </div>
@@ -122,43 +122,37 @@
                 </div>
             </div>
             <!-- 수상내역 슬라이드 -->
-            <div class="station">
-                <ul class="train">
-                    <li>
+            <div class="station swiper mySwiper">
+                <ul class="train swiper-wrapper">
+                    <li class="swiper-slide">
                         <img src="./img/slide1.png" alt="특허청 특허등록3개">
                     </li>
-                    <li>
+                    <li class="swiper-slide">
                         <img src="./img/slide2.png" alt="한국관광공사 선정">
                     </li>
-                    <li>
+                    <li class="swiper-slide">
                         <img src="./img/slide3.png" alt="STA">
                     </li>
-                    <li>
+                    <li class="swiper-slide">
                         <img src="./img/slide4.png" alt="한국관광공사 선정">
                     </li>
-                    <li>
+                    <li class="swiper-slide">
                         <img src="./img/slide5.png" alt="한국관광공사 선정">
                     </li>
-                    <li>
+                    <li class="swiper-slide">
                         <img src="./img/slide6.png" alt="서울관광재단 선정">
                     </li>
-                    <li>
+                    <li class="swiper-slide">
                         <img src="./img/slide7.png" alt="서울관광재단 선정">
                     </li>
-                    <li>
+                    <li class="swiper-slide">
                         <img src="./img/slide8.png" alt="한국관광공사 선정">
                     </li>
-                    <li>
+                    <li class="swiper-slide">
                         <img src="./img/slide9.png" alt="서울관광재단 선정">
                     </li>
                 </ul>
-                <!-- 슬라이드 버튼 -->
-                <div class="btnPrev">
-                    <img src="./img/btnPrev.png" alt="슬라이드 뒤로가기버튼">
-                </div>
-                <div class="btnNext">
-                    <img src="./img/btnNext.png" alt="슬라이드 앞으로가기버튼">
-                </div>
+                <div class="swiper-pagination"></div>
             </div>
         </div>
     </div>
