--- a/index.html
+++ b/index.html
@@ -41,17 +41,17 @@
                 </figure>
                 <ul class="snsList">
                     <li>
-                        <a href="https://pf.kakao.com/_KarEG">
+                        <a href="https://pf.kakao.com/_KarEG" target="_blank">
                             <img src="./img/kakaochannel.png" alt="카카오채널 이동하기">
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.instagram.com/cubevalley_official/">
+                        <a href="https://www.instagram.com/cubevalley_official/" target="_blank">
                             <img src="./img/insta.png" alt="인스타 이동하기">
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.facebook.com/CubeValley">
+                        <a href="https://www.facebook.com/CubeValley" target="_blank">
                             <img src="./img/facebook.png" alt="페이스북 이동하기">
                         </a>
                     </li>
