--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>푸터디자인</title>
+    <title>푸터디자인(아임코리아 한글사이트)</title>
     <link rel="stylesheet" href="./css/index.css">
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
     <script src="./js/script.js"></script>
@@ -18,13 +18,13 @@
         <div class="first-line">
             <div class="firstCont">
                 <ul>
-                    <li><a href="https://www.cubevalley.net/goods?id=14153&UseCache=false&pageID=1309" target="_blank">회사소개</a></li>
-                    <li><a href="https://www.cubevalley.net/goods?id=14412&UseCache=false&pageID=1309" target="_blank">언론보도</a></li>
+                    <li><a href="https://imkorea.world/goods?id=14447&UseCache=false&pageID=1322" target="_blank">회사소개</a></li>
+                    <li><a href="https://imkorea.world/goods?id=14459&UseCache=false&pageID=1322" target="_blank">언론보도</a></li>
                 </ul>
                 <div class="family">
                     <ul>
+                      <li><a href="https://www.cubevalley.net/" target="_blank">CUBEVALLEY</a></li>
                       <li><a href="https://cubeez.kr/" target="_blank">CUBEEZ</a></li>
-                      <li><a href="https://en.imkorea.world/" target="_blank">IMKOREA</a></li>
                       <li><a href="https://beyond56.com/" target="_blank">BEYOND56</a></li>
                     </ul>
                     <a href="#" class="">
@@ -37,25 +37,8 @@
         <div class="footerWrap">
             <div class="second-line">
                 <figure>
-                    <img src="./img/logo_cv_en.png" alt="큐브밸리로고">
+                    <img src="./img/logo_main_pc.png" alt="아임코리아 로고">
                 </figure>
-                <ul class="snsList">
-                    <li>
-                        <a href="https://pf.kakao.com/_KarEG" target="_blank">
-                            <img src="./img/kakaochannel.png" alt="카카오채널 이동하기">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.instagram.com/cubevalley_official/" target="_blank">
-                            <img src="./img/insta.png" alt="인스타 이동하기">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.facebook.com/CubeValley" target="_blank">
-                            <img src="./img/facebook.png" alt="페이스북 이동하기">
-                        </a>
-                    </li>
-                </ul>
             </div>
             <div class="third-line">
                 <ul class="info-cont">
@@ -72,7 +55,7 @@
                       </dl>
                       <dl>
                         <dt>이메일 : </dt>
-                        <dd>highend@cubevalley.net</dd>
+                        <dd>imkorea@cubevalley.net</dd>
                       </dl>
                     </li>
                     <li>
