--- a/index.html
+++ b/index.html
@@ -39,6 +39,23 @@
                 <figure>
                     <img src="./img/logo_main_pc.png" alt="아임코리아 로고">
                 </figure>
+                <ul class="snsList">
+                  <li>
+                      <a href="https://www.instagram.com/cubevalley_imkorea/" target="_blank">
+                          <img src="./img/insta.png" alt="인스타 이동하기">
+                      </a>
+                  </li>
+                  <li>
+                      <a href="https://twitter.com/cubevalley" target="_blank">
+                          <img src="./img/xlogo.png" alt="X 이동하기">
+                      </a>
+                  </li>
+                  <li>
+                      <a href="https://www.facebook.com/profile.php?id=100088699322409&locale=ko_KR" target="_blank">
+                          <img src="./img/facebook.png" alt="페이스북 이동하기">
+                      </a>
+                  </li>
+              </ul>
             </div>
             <div class="third-line">
                 <ul class="info-cont">
